Begin working towards archive-based deployment (failed, thus far).   - Replace normal Rails boot stuff.   - Enhance the dynamic classloadering. Make Ruby runtime initialization fancier than just an script. Rename Yaml-based deployers to be consistent. Clean up some debug.